--- a/agileday-hr/index.html
+++ b/agileday-hr/index.html
@@ -49,6 +49,38 @@
 					</p>
 				</section>
 
+
+				<section>
+					<h2>Agenda</h2>
+					<table>
+						<thead>
+							<tr>
+								<th>Sujet</th>
+								<th>Durée</th>
+							</tr>
+						</thead>
+						<tbody>
+
+							<tr>
+								<td>Introduction</td>
+								<td>5mn</td>
+							</tr>
+							<tr>
+								<td>Recrutement avec Moving Motivators</td>
+								<td>20mn</td>
+							</tr>
+							<tr>
+								<td>Kanban RH</td>
+								<td>15mn </td>
+							</tr>
+							<tr>
+								<td>Conclusion</td>
+								<td>5mn </td>
+							</tr>
+						</tbody>
+					</table>
+				</section>
+
 				<section>
 					<h2>Hello There</h2>
 					<p>
