arbre de compet

--- a/agileday-hr/index.html
+++ b/agileday-hr/index.html
@@ -67,7 +67,11 @@
 							</tr>
 							<tr>
 								<td>Recrutement avec Moving Motivators</td>
-								<td>20mn</td>
+								<td>15mn</td>
+							</tr>
+							<tr>
+								<td>Arbre de compétence, rétrospective</td>
+								<td>5mn</td>
 							</tr>
 							<tr>
 								<td>Kanban RH</td>
