moving motivators draft slide

--- a/agileday-hr/index.html
+++ b/agileday-hr/index.html
@@ -86,11 +86,10 @@
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
-					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
-					</p>
-				</section>
+					<section data-background="images/movingmotivators.jpg">
+						<h2>Moving Motivators</h2>
+					<section>
+				</section>		
 
 				<!-- Example of nested vertical slides -->
 				<section>
