slide avec photo retro

--- a/agileday-hr/index.html
+++ b/agileday-hr/index.html
@@ -85,11 +85,13 @@
 					</table>
 				</section>
 
-				<section>
-					<section data-background="images/movingmotivators.jpg">
-						<h2>Moving Motivators</h2>
-					<section>
-				</section>		
+				<section data-background="images/movingmotivators.jpg">
+					<h2>Moving Motivators</h2>
+				</section>
+
+				<section data-background="images/retro-timeline.jpg">
+					<h2>Retro Timeline</h2>
+				</section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
