mode bourrin on

--- a/agileday-hr/index.html
+++ b/agileday-hr/index.html
@@ -85,11 +85,12 @@
 					</table>
 				</section>
 
-				<section>
-					<section data-background="images/movingmotivators.jpg">
-						<h2>Moving Motivators</h2>
-					<section>
-				</section>		
+				<section data-background="images/movingmotivators.jpg">
+					<h2 style="color:white;">Moving Motivators</h2>
+					<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+					<p>&nbsp;</p><p>&nbsp;</p>
+					<p>&nbsp;</p>
+				</section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
