--- a/agileday-hr/index.html
+++ b/agileday-hr/index.html
@@ -114,9 +114,25 @@
 				<section data-background="images/kanban/afaire-encours-fini.png">
 				</section>
 
-
 				<section data-background="images/kanban/01-kanban.png">
 				</section>
+
+				<section data-background="images/kanban/02-kanban.png">
+				</section>
+
+				<section data-background="images/kanban/03-kanban.png">
+				</section>
+
+				<section data-background="images/kanban/02-fiche-exemple.png">
+				</section>
+
+				<section data-background="images/kanban/04-kanban-wip.png">
+				</section>
+
+				<section data-background="images/kanban/05-kanban-time.png">
+				</section>
+
+
 			</div>
 
 		</div>
