--- a/agileday-hr/index.html
+++ b/agileday-hr/index.html
@@ -63,11 +63,11 @@
 
 							<tr>
 								<td>Introduction</td>
-								<td>5mn</td>
+								<td>2mn</td>
 							</tr>
 							<tr>
 								<td>Recrutement avec Moving Motivators</td>
-								<td>15mn</td>
+								<td>18mn</td>
 							</tr>
 							<tr>
 								<td>Arbre de compétence, rétrospective</td>
@@ -130,6 +130,18 @@
 				</section>
 
 				<section data-background="images/kanban/05-kanban-time.png">
+				</section>
+
+				<section data-background="images/casa/casa2.jpg">
+				</section>
+
+				<section data-background="images/casa/casa3.jpg">
+				</section>
+
+				<section data-background="images/casa/casa4.jpg">
+				</section>
+
+				<section data-background="images/casa/casa1.jpg">
 				</section>
 
 
