choix nouveau theme, création page présentation et agenda

--- a/agile-grenoble-coach-corner/index.html
+++ b/agile-grenoble-coach-corner/index.html
@@ -6,8 +6,8 @@
 
 		<title>Agile Grenoble - Coach Corner</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Coach Corner">
+		<meta name="author" content="Alexandre THIBAULT">
 
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
+		<link rel="stylesheet" href="css/theme/moon.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -40,15 +40,19 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
+
+                <!-- ----------------------------------------------------------------- Courverture -->
+
 				<section>
 					<h1>Coach Corner</h1>
 					<h3>Agile Grenoble 2017</h3>
-					
+					<img src="images/logo_ag_white_64.png" style="border:0;"/> 
 					<p>
-						<small>Alexandre Thibault</small>
+						<small>Alexandre THIBAULT</small>
 					</p>
 				</section>
 
+                <!-- ----------------------------------------------------------------- Agenda -->
 
 				<section>
 					<h2>Agenda</h2>
@@ -62,28 +66,27 @@
 						<tbody>
 
 							<tr>
-								<td>Introduction</td>
-								<td>2mn</td>
+								<td>Contexte et historique</td>
+								<td>10 mn</td>
 							</tr>
 							<tr>
-								<td>Recrutement avec Moving Motivators</td>
-								<td>18mn</td>
+								<td>Qui, quoi, pourquoi, comment</td>
+								<td>10 mn</td>
 							</tr>
 							<tr>
-								<td>Arbre de compétence, rétrospective</td>
-								<td>5mn</td>
+								<td>Pratiquons le coach corner par paires !</td>
+								<td>25 mn</td>
 							</tr>
 							<tr>
-								<td>Kanban RH</td>
-								<td>15mn </td>
+								<td>Debrief / Questions / Réponses</td>
+								<td>05 mn </td>
 							</tr>
-							<tr>
-								<td>Conclusion</td>
-								<td>5mn </td>
-							</tr>
+
 						</tbody>
 					</table>
 				</section>
+
+                <!-- ----------------------------------------------------------------- Examples -->				
 
 				<section data-background="images/movingmotivators.jpg">
 
