images et slides story telling arrivée paris

--- a/agile-grenoble-coach-corner/index.html
+++ b/agile-grenoble-coach-corner/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Agile Grenoble - Coach Corner</title>
+		<title>Coach Corner - Agile Grenoble 2017</title>
 
 		<meta name="description" content="Coach Corner">
 		<meta name="author" content="Alexandre THIBAULT">
@@ -64,7 +64,6 @@
 							</tr>
 						</thead>
 						<tbody>
-
 							<tr>
 								<td>Contexte et historique</td>
 								<td>10 mn</td>
@@ -79,23 +78,85 @@
 							</tr>
 							<tr>
 								<td>Debrief / Questions / Réponses</td>
-								<td>05 mn </td>
+								<td>05 mn</td>
 							</tr>
-
 						</tbody>
 					</table>
 				</section>
 
-                <!-- ----------------------------------------------------------------- Examples -->				
+                <!-- ----------------------------------------------------------------- Cuba -->
 
-				<section data-background="images/movingmotivators.jpg">
-
-					<h2 style="color:white;">Moving Motivators</h2>
+				<section data-background="images/cuba.jpg">
+					<h2 style="color:white;">Introspection à Cuba</h2>
 					<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 					<p>&nbsp;</p><p>&nbsp;</p>
+					<p>&nbsp;</p><p>&nbsp;</p>
+				</section>		
+
+                <!-- ----------------------------------------------------------------- McGill -->								
+
+				<section data-background="images/mcgill.jpg">
+					<h2 style="color:white;">Chasse à l'Université McGill</h2>
+					<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+					<p>&nbsp;</p><p>&nbsp;</p>
+					<p>&nbsp;</p><p>&nbsp;</p>
+				</section>					
+
+				<!-- ----------------------------------------------------------------- SSII/ESN -->		
+
+				<section data-background="images/partons.jpg">
+					<h2 style="color:white;">Partons découvrir ce merveilleux monde des SSII !</h2>
+					<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 					<p>&nbsp;</p>
 				</section>
 
+                <!-- ----------------------------------------------------------------- CDI / Commercial -->								
+
+				<section data-background="images/cdi.jpg">
+					<h2 style="color:white;">Signature du CDI</h2>
+					<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+					<p>&nbsp;</p><p>&nbsp;</p>
+					<p>&nbsp;</p><p>&nbsp;</p>
+				</section>
+
+                <!-- ----------------------------------------------------------------- Au revoir Québec -->								
+
+				<section data-background="images/aurevoirquebec.jpg">
+					<h2 style="color:white;">Je reviendrai à Montréal !</h2>
+					<p>&nbsp;</p><p>&nbsp;</p>
+				</section>
+
+                <!-- ----------------------------------------------------------------- Parachutiste -->	
+
+				<section data-background="images/parachute.jpg">
+					<h2 style="color:white;">Ta mission, si tu l'acceptes...</h2>
+					<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+					<p>&nbsp;</p><p>&nbsp;</p>
+					<p>&nbsp;</p><p>&nbsp;</p>
+				</section>
+
+                <!-- ----------------------------------------------------------------- se tirer les cheveux -->					
+
+				<section data-background="images/galere.jpg">
+					<br/><br/><br/><br/><br/><br/><br/><br/><br/>
+					<h2 style="color:yellow;">La galère de l'expert Java</h2>
+				</section>				
+
+                <!-- ----------------------------------------------------------------- Ma boîte... ah oui ma boîte -->	
+				
+				<section data-background="images/question.jpg">
+					<br/><br/><br/><br/><br/><br/><br/><br/><br/>
+					<h2 style="color:white;">Ma boîte ??!? Quelle boîte ?</h2>
+				</section>
+
+                <!-- ----------------------------------------------------------------- chèques -->
+
+				<section data-background="images/cheque.jpg">
+					<h2 style="color:white;">Ah oui, celle qui fait mes chèques !</h2>
+					<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+				</section>	
+
+                <!-- ----------------------------------------------------------------- Examples -->				
 
 				<section data-background="images/arbre.jpg">
 					<br/><br/><br/><br/><br/><br/><br/><br/><br/>
